fixed overflow

--- a/app/view/home/_home.scss
+++ b/app/view/home/_home.scss
@@ -6,4 +6,9 @@
   height: 120vw;
   margin-left: 10%;
   margin-right: 10%;
+
+  .gallery-section {
+    overflow: auto;
+    height: 70vw;
+  }
 }
